--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev":"nodemon server.js"
-
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +17,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "js-confetti": "^0.12.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0"
